# concurrent-nbody

./: CMakeLists.txt  README.md  common.h  main.cpp  mpi  vector2.h
nbodyDoc/: bare_conf.aux  bare_conf.dvi  bare_conf.tex  changelog.txt
